--- a/picking.html
+++ b/picking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rozdělení pracovníků na picking</title>
+  <title>Picking</title>
   <!-- Google font pro stejný vzhled jako docházka -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -191,7 +191,7 @@
 </head>
 <body>
   <div class="header">
-    <h1 class="header-title">Rozdělení pracovníků</h1>
+    <h1 class="header-title">Rozdělení picking</h1>
   </div>
   <div class="container">
     <table class="zones-table">
