--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="nav">
     <a href="picking.html">Picking</a>
     <a href="barcode.html">Barcode</a>
-    <a href="zony.html">Zóny tisk</a>
+    <a href="zony.html">Zóny</a>
     <a href="bra_pc.html">Wait BRA</a>
     <a href="dochazka.html">Příchody</a>
     <a href="plan_smen.html">Plán směn</a>
