--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
+      <div>"Vytvořil Martin Štancl"</div>
     </div>
   </header>
 
