--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
-      <div><tag>Vytvořil Martin Štancl</tag>tag></div>
+      <div><tag>Vytvořil Martin Štancl</tag></div>
     </div>
   </header>
 
