--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny</a>
     <a href="bra_pc.html">Wait BRA</a>
-    <a href="dochazka.html">Příchody</a>
+    <a href="prichody.html">Příchody</a>
     <a href="plan_smen.html">Plán směn</a>
   </div>
 
